--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,29 +31,53 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const post1500 = inventors.filter(inventor => inventor.year > 1499 && inventor.year < 1600)
+    console.log(post1500)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    console.log(fullNames)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    inventors.sort((a, b) => a.year - b.year)
+    console.log(inventors)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const allYears = inventors.reduce(function(accumulator, currentValue) {
+      return accumulator + (currentValue.passed - currentValue.year)
+    }, 0)
+    console.log(allYears)
 
     // 5. Sort the inventors by years lived
+    inventors.sort((a, b) => (b.passed - b.year)- (a.passed - a.year))
+    console.log(inventors)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    // let firstNames = []
+    // for (let i=0; i<people.length; i++) {
+    //   let current = people[i]
+    //   console.log("CURRENT: ", current)
+    //   current.split(' ')
+    //   firstNames.push("CURRENT SPLIT: ", current)
+    // }
+    // console.log("FIRST NAMES: ", firstNames)
+    // people.sort((a, b) => a[0] - b[0])
+    // console.log(people)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    let instances = data.reduce(function(accumulator, currentValue) {
+      return 
+    })
   </script>
 </body>
 </html>
