--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,31 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    // let atLeastOne19 = people.some(function(person){
+    //   const year = (new Date()).getFullYear()
+    //   return year - person.year
+    // })
+    
+    let atLeastOne19 = people.some(person => ((new Date()).getFullYear() - person.year) >= 19)
+    console.log(atLeastOne19)
+
     // Array.prototype.every() // is everyone 19 or older?
+    let isEveryone19OrOlder = people.every(person => ((new Date()).getFullYear - person.year) >=19)
+    console.log(isEveryone19OrOlder)
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    let matchComment = comments.find(comment => comment.id === 823423 )
+    console.log(matchComment)
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let index = comments.findIndex(comment => comment.id === 823423)
+    console.log(index)
+    comments.splice(index, 1)
+    console.log(comments)
 
   </script>
 </body>
