--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,53 @@
     }
 
     // Regular
+    console.log("HELLO WORLD!")
 
     // Interpolated
+    const myAge = 30
+    console.log(`HERRO ${myAge} year old!`)
 
     // Styled
+    console.log("%c awesome text right here", "font-size: 30px; background: gray; text-shadow: 5px 5px 0 pink")
 
     // warning!
+    console.warn("nonononooooo")
 
     // Error :|
+    console.error("NOPE!")
 
     // Info
+    console.info("Nope is a nope is a nope")
 
     // Testing
+    console.assert(1 === 2, "that is not true")
 
     // clearing
+    console.clear()
 
     // Viewing DOM Elements
+    const p = document.querySelector('p')
+    console.log(p)
+    console.dir(p)
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(dog.name)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.groupEnd(dog.name)
+    })
 
     // counting
+    console.count("bark!")
+    console.count("bark!")
+    console.count("bark!")
+    console.count("bark!")
+    console.count("bark!")
 
     // timing
+    console.time("start")
+    console.log("DOING SOMETHING")
+    console.timeEnd('end')
 
   </script>
 </body>
