--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,6 +96,34 @@
   </div>
 
 <script>
+  const boxes = document.querySelectorAll('input')
+  console.log(boxes)
+
+  let lastChecked;
+
+  function handleCheck(e) {
+    // if shift key down
+    let inBetween = false;
+    if (e.shiftKey && this.checked) {
+      boxes.forEach(box => {
+        console.log(box)
+        if (box === this || box === lastChecked) {
+          inBetween = !inBetween
+        }
+
+        if (inBetween) {
+          box.checked = true;
+        }
+      })
+    }
+    lastChecked = this
+  }
+
+  boxes.forEach(box => box.addEventListener('click', handleCheck))
+
+  
+
+
 </script>
 </body>
 </html>
