--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -98,25 +98,25 @@
       const boxes = document.querySelectorAll('.inbox input[type="checkbox"]');
       console.log(boxes);
 
+      // to document the latest clicked when shift is down;
       let lastChecked;
 
       function handleCheck(e) {
-        console.log("clicked!");
-        // if shift key down
-        // let inBetween = false;
-        // if (e.shiftKey && this.checked) {
-        //   boxes.forEach((box) => {
-        //     console.log(box);
-        //     if (box === this || box === lastChecked) {
-        //       inBetween = !inBetween;
-        //     }
+        if shift key down
+        let inBetween = false;
+        if (e.shiftKey && this.checked) {
+          boxes.forEach((box) => {
+            console.log(box);
+            if (box === this || box === lastChecked) {
+              inBetween = !inBetween;
+            }
 
-        //     if (inBetween) {
-        //       box.checked = true;
-        //     }
-        //   });
-        // }
-        // lastChecked = this;
+            if (inBetween) {
+              box.checked = true;
+            }
+          });
+        }
+        lastChecked = this;
       }
 
       boxes.forEach((box) => box.addEventListener("click", handleCheck));
